fix another spacing

--- a/block/another.css
+++ b/block/another.css
@@ -1,6 +1,6 @@
 .another {
     width: 100%;
-    padding: 0 10% 40px;
+    padding: 0 10% 100px;
 }
 
 .another_wrapper {
